<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Gvl" Id="{ae1b8831-7c82-413c-b9d0-8c3c429f4879}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bStart: BOOL; //Pulsante di Start
	bStop: BOOL; //Pulsante di Stop
	Green: BOOL; //Spia verde
	Yellow: BOOL; //Spia verde
	Red: BOOL; //Spia verde
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>