<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_StateMachine" Id="{f0fdb729-a96a-4ef9-9b71-68fec912dd01}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_StateMachine
VAR_INPUT
	bStart: BOOL;
	bStop: BOOL;
END_VAR
VAR_OUTPUT
	Green: BOOL;
	Yellow: BOOL;
	Red: BOOL;
END_VAR
VAR
	State: E_States;
	T_Green: TON;
	T_Yellow: TON;
	T_Red: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (bStop) THEN
	State:= E_States.eStop;
	//Reset dei timer
	T_Green(IN:= FALSE);
	T_Yellow(IN:= FALSE);
	T_Red(IN:= FALSE);
END_IF

CASE State OF
	E_States.eStop:
		Green:= FALSE;
		Yellow:= FALSE;
		Red:= FALSE;
		IF (NOT bStop AND bSTart) THEN
			State := E_States.eGreen; //Passo allo stato Verde
		END_IF
	
	E_States.eGreen:
		T_Green(IN:= TRUE, PT:= T#5S);
		Green:= TRUE;
		Yellow:= FALSE;
		Red:= FALSE;
		IF (T_Green.Q) THEN //Il tempo del verde è scaduto
			T_Green(IN:= FALSE); //Reset del timer verde 
			State := E_States.eYellow; //Passo allo stato Giallo
		END_IF

	E_States.eYellow:
		T_Yellow(IN:= TRUE, PT:= T#2S);
		Green:= TRUE;
		Yellow:= TRUE;
		Red:= FALSE;
		IF (T_Yellow.Q) THEN //Il tempo del giallo è scaduto
			T_Yellow(IN:= FALSE); //Reset del timer giallo 
			State := E_States.eRed; //Passo allo stato Rosso
		END_IF
		
	E_States.eRed:
		T_Red(IN:= TRUE, PT:= T#8S);
		Green:= FALSE;
		Yellow:= FALSE;
		Red:= TRUE;
		IF (T_Red.Q) THEN //Il tempo del rosso è scaduto
			T_Red(IN:= FALSE); //Reset del timer rosso 
			State := E_States.eGreen; //Passo allo stato Verde
		END_IF
	
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="FB_StateMachine">
      <LineId Id="9" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="22" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="5" />
      <LineId Id="40" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="41" Count="3" />
      <LineId Id="47" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="49" Count="8" />
      <LineId Id="48" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="60" Count="7" />
      <LineId Id="59" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="30" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>